@@ -1,3 +1,9 @@
+2008-01-13  Martin Lambers <marlam@marlam.de>
+
+	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvl/Makefile.am,
+	cvl/glsl/hdr/tonemap_reinhard05.glsl, cvl/glsl/hdr/log_avg_lum.glsl,
+	cvl/glsl/hdr/tonemap_tumblin99.glsl: Add cvl_tonemap_reinhard05().
+
 2008-01-12  Martin Lambers <marlam@marlam.de>
 
 	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvl/Makefile.am, 
